force-app/main/default/objects/CaseTeamRoleAssociation__c/CaseTeamRoleAssociation__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A mapping of the association of Case Team Roles and Role Groups</description>
    <label>Case Team Role Association</label>
</CustomObject>