force-app/main/default/objects/CaseTeamRoleAssociation__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <description>The value of Type field on Account standard object</description>
    <label>Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>