force-app/main/default/objects/CaseTeamRoleAssociation__c/fields/CaseTeamRole__c.field-meta.xml
<CustomField>
    <fullName>CaseTeamRole__c</fullName>
    <label>Case Team Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>