force-app/main/default/objects/CaseTeamRoleAssociation__c/fields/ContactRole__c.field-meta.xml
<CustomField>
    <fullName>ContactRole__c</fullName>
    <label>Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>